apps/hivewiki-web/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivewiki-web
  namespace: hivewiki-web-dev
  labels:
    app: hivewiki-web
    app.kubernetes.io/name: hivewiki-web
    app.kubernetes.io/part-of: hivewiki
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivewiki-web
      environment: dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: hivewiki-web
      labels:
        app: hivewiki-web
        app.kubernetes.io/name: hivewiki-web
        app.kubernetes.io/part-of: hivewiki
        environment: dev
    spec:
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: hivewiki-web
          image: 647502392199.dkr.ecr.ap-northeast-2.amazonaws.com/hivewiki-web:dev-e10a5ab
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: tmp
          emptyDir: {}
