apps/hivewiki-web/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivewiki-web
  namespace: hivewiki-web-dev
  labels:
    app: hivewiki-web
    app.kubernetes.io/name: hivewiki-web
    app.kubernetes.io/part-of: hivewiki
    environment: dev
spec:
  selector:
    app: hivewiki-web
    environment: dev
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
