apps/hivewiki-web/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hivewiki-web
  namespace: hivewiki-web-dev
  labels:
    app: hivewiki-web
    app.kubernetes.io/name: hivewiki-web
    app.kubernetes.io/part-of: hivewiki
    environment: dev
spec:
  parentRefs:
    - name: my-alb-gateway
      namespace: kube-system
      sectionName: http
    - name: my-alb-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - test.hive-wiki.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /metrics
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.k8s.aws
            kind: ListenerRuleConfiguration
            name: deny-metrics
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hivewiki-web
          port: 80
